// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildCssCode > (a) generates px CSS for a gradient+shadow+radius rect 1`] = `
"/* Card */
.card {
  box-sizing: border-box;
  width: 200px;
  height: 100px;
  background-image: linear-gradient(180deg, #ff0000 0%, #0000ff 100%);
  background-size: auto;
  background-position: 0% 0%;
  background-repeat: repeat;
  border-radius: 12px;
  box-shadow: 0px 4px 8px 0px #00000040;
}"
`;

exports[`buildCssCode > (b) generates rem CSS for the same rect (remBase 16) 1`] = `
"/* Card */
.card {
  box-sizing: border-box;
  width: 12.5rem;
  height: 6.25rem;
  background-image: linear-gradient(180deg, #ff0000 0%, #0000ff 100%);
  background-size: auto;
  background-position: 0% 0%;
  background-repeat: repeat;
  border-radius: 0.75rem;
  box-shadow: 0 0.25rem 0.5rem 0 #00000040;
}"
`;

exports[`buildCssCode > (c) generates flexbox CSS for an auto-layout frame with wrap/min-max/negative gap 1`] = `
"/* Wrap Row */
.wrap-row {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 4px;
  width: 300px;
  height: 60px;
  background-color: #ffffff;
}"
`;

exports[`buildCssCode > (e) emits one block per node for a multi-selection with unique class names 1`] = `
"/* Button */
.button {
  box-sizing: border-box;
  width: 6.25rem;
  height: 2.5rem;
  background-color: #ff0000;
}

/* Button */
.button-2 {
  box-sizing: border-box;
  width: 6.25rem;
  height: 2.5rem;
  background-color: #00ff00;
}"
`;
